# hreq-h1

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: server_hello.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: server_chunk_clen.rs  server_req.rs
src/: buf_reader.rs  chunked.rs  client.rs  error.rs  fast_buf.rs  http11.rs  lib.rs  limit.rs  mpsc.rs  server.rs  share.rs  try_write.rs
tests/: client_errors.rs  client_get.rs  client_reuse.rs  client_simple.rs  client_spec.rs  common.rs  server_req_body.rs  server_simple.rs  throughput.rs
