[package]
name = "hreq-h1"
version = "0.1.2"
authors = ["Martin Algesten <martin@algesten.se>"]
description = "Asynchronous HTTP/1.1 (and 1.0) implementation"
license = "MIT/Apache-2.0"
repository = "https://github.com/algesten/hreq-h1"
keywords = ["web", "request", "http", "rest", "client"]
categories = ["web-programming::http-client"]
readme = "README.md"
edition = "2018"

[dependencies]
futures-channel = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures-io = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await-macro", "io", "sink"] }
http = "0.2"
httparse = "1"
log = "0.4"

[dev-dependencies]
env_logger = "0.7"
pretty_env_logger = "0.4"
async-std = { version = "1", features = ["attributes"] }
